# RAGcli

./: .gitignore  README.md  pyproject.toml  requirements.txt
rag/: __init__.py  __main__.py  chunker.py  cli.py  config.py  embeddings.py  ingest.py  models.py  query.py  store.py
